<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_A"
                android:id="@+id/textView"
                android:paddingRight="15dp"/>
            <EditText
                android:id="@+id/a_left_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:text="2"
                android:inputType="numberDecimal|numberSigned"
                />
            <EditText
                android:id="@+id/a_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:text="4"
                android:inputType="numberDecimal|numberSigned"/>
            <EditText
                android:id="@+id/a_right_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:text="5"
                android:inputType="numberDecimal|numberSigned"/>
            <ImageView
                android:src="@mipmap/ic_clear"
                android:id="@+id/clearA"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_B"
                android:paddingRight="15dp"/>
            <EditText
                android:id="@+id/b_left_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:text="1"
                android:inputType="numberDecimal|numberSigned"/>
            <EditText
                android:id="@+id/b_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:text="3"
                android:inputType="numberDecimal|numberSigned"/>
            <EditText
                android:id="@+id/b_right_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:text="6"
                android:inputType="numberDecimal|numberSigned"/>
            <ImageView
                android:src="@mipmap/ic_clear"
                android:id="@+id/clearB"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:text="@string/step_count"/>
            <EditText
                android:layout_span="3"
                android:id="@+id/step_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:text="70"
                android:inputType="number"/>
            <ImageView
                android:src="@mipmap/ic_clear"
                android:id="@+id/clearStepCount"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_span="5"
                android:id="@+id/btn_calc"
                android:text="@string/calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:padding="5dp"
                android:layout_span="5"
                android:text="@string/result"
                android:layout_gravity="left"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_span="5"
                android:id="@+id/result"/>
        </TableRow>
    </TableLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_span="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:background="@color/colorA"
                    android:layout_height="2dp"
                    android:layout_width="7dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:background="@color/colorB"
                    android:layout_height="2dp"
                    android:layout_width="7dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="Euclid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:background="@color/colorEuqlid"
                    android:layout_height="2dp"
                    android:layout_width="7dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="Hemming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:background="@color/colorHemming"
                    android:layout_height="2dp"
                    android:layout_width="7dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>


            <lecho.lib.hellocharts.view.LineChartView
                android:layout_margin="15dp"
                android:layout_span="5"
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </lecho.lib.hellocharts.view.LineChartView>


</LinearLayout>